kubernetes/environments/dev/security/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-all
  namespace: restaurant-dev

spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-dns-egress
  namespace: restaurant-dev

spec:
  podSelector: {}

  policyTypes:
    - Egress

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

          podSelector:
            matchLabels:
              k8s-app: kube-dns

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-traefik-ingress
  namespace: restaurant-dev

spec:
  podSelector:
    matchLabels:
      app: restaurant-template

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik

      ports:
        - protocol: TCP
          port: 8080
